[package]
name = "scdf_bridge"
version = "0.1.0"
authors = ["wangxiao <wx497657341@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"

rand = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
